<resources>
    <string name="app_name" translatable="false">BBS-Quick Search</string>
    <string name="btnSearch">Search</string>
    <string name="txtSearchterm">Searchterm</string>
    <string name="btnSettings">Settings</string>
    <string name="activity_settings">Settings</string>
    <string name="txtUser">User</string>
    <string name="txtPass">Password</string>
    <string name="sliderDays">Days</string>
    <string name="sliderDaysDescription">How many days should be searched?</string>
    <string name="sliderDaysValue">Days:</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="loginFailed">Login Failed</string>
    <string name="downloadFail">The download from the server failed! Please try again later</string>
    <string name="loginWrong">Login Failed! Please reenter the credentials in the Settings or try again later</string>
    <string name="btnClose">Close</string>
    <string name="btnLogin">Login</string>
    <string name="btnSave">Save and Exit</string>
    <string name="lblSave">Credentials only gets saved if they are correct</string>
    <string name="credentialsNotSaved">Credentials wasn\'t saved</string>
    <string name="loading">Loading, Please Wait …</string>
    <string name="noLessons">There are no Lessons :c</string>
    <string name="lessons1">"There are/is "</string>
    <string name="lessons2">" result(s) :)"</string>
    <string name="details">Lessons Details</string>
    <string name="login1">Authentification</string>
    <string name="wait">please wait …</string>
</resources>
